<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Ethereum and NFC</string>

    <string name="main_activity_title" translatable="false">Home</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="qr_code" translatable="false">QR Code</string>

    <string name="title_activity_send_transaction" translatable="false">Send ETH Transaction</string>
    <string name="title_activity_send_erc20_tokens" translatable="false">Send From Smart Contracts</string>
    <string name="title_activity_voting" translatable="false">Voting</string>
    <string name="hold_card" translatable="false">Tap a card against the back of your device</string>
    <string name="send_eth" translatable="false">Send ETH</string>
    <string name="recipient_address" translatable="false">Recipient Address</string>
    <string name="amount_eth" translatable="false">Amount ETH</string>
    <string name="gas_price" translatable="false">Gas Price</string>
    <string name="gas_limit" translatable="false">Gas Limit</string>
    <string name="hold_card_payment" translatable="false">Tap a card against the back of your device to send a transaction</string>
    <string name="card_found" translatable="false">Card detected</string>
    <string name="send_success" translatable="false">Sent successful!</string>
    <string name="reading_balance" translatable="false">Reading balance…</string>
    <string name="send_erc20" translatable="false">Transfer From Smart Contract</string>
    <string name="voting" translatable="false">Voting</string>
    <string name="token_amount" translatable="false">Token Amount</string>
    <string name="contract_address" translatable="false">Contract Address</string>
    <string name="current_token_balance" translatable="false">Current Token Balance: %s</string>
    <string name="about" translatable="false">About</string>
    <string name="hold_card_for_while" translatable="false">Hold card for some seconds!</string>
    <string name="er20_contract_address" translatable="false">Smart Contract Address</string>
    <string name="err_receipient_required" translatable="false">Recipient Address is required!</string>
    <string name="err_amount_required" translatable="false">Amount is required!</string>
    <string name="err_gasprice_required" translatable="false">Gas Price is required!</string>
    <string name="err_gaslimit_required" translatable="false">Gas Limit is required!</string>
    <string name="err_contract_address_missing" translatable="false">Contract Address is required!</string>
    <string name="wrong_card" translatable="false">This is no Infineon card!</string>
    <string name="operation_not_supported" translatable="false">Card does not support this operation!</string>
    <string name="answer_1" translatable="false">> 5 billion</string>
    <string name="answer_2" translatable="false"> 10 billion</string>
    <string name="answer_3" translatable="false"> 15 billion</string>
    <string name="answer_4" translatable="false"> 20 billion</string>
    <string name="question" translatable="false">How many security controllers have been sold by Infineon in the last 10 years?</string>
    <string name="voted_successful" translatable="false">Voted successful!</string>
    <string name="hold_card_for_vote" translatable="false">Tap a card against the back of your device to vote</string>
    <string name="refresh_balance" translatable="false">Refresh balance</string>
    <string name="switch_network" translatable="false">Switch network</string>
    <string name="switch_to_mainnet" translatable="false">Switch to mainnet</string>
    <string name="switch_to_ropsten" translatable="false">Switch to testnet</string>
    <string name="ask_switch_network" translatable="false">Are you sure you want to switch to %s</string>
    <string name="yes" translatable="false">yes</string>
    <string name="no" translatable="false">no</string>
    <string name="could_not_refresh" translatable="false">Could not refresh!</string>
    <string name="switched_to" translatable="false">Switched to %s</string>
    <string name="could_not_vote" translatable="false">Could not vote!</string>
    <string name="incorrect_contract" translatable="false">Incorrect contract address!</string>
    <string name="card_not_whitelisted" translatable="false">This card is not whitelisted!</string>
    <string name="voting_please_wait" translatable="false">Voting for %s. Please hold the card…</string>
    <string name="could_not_send_transaction" translatable="false">Could not send transaction: %s</string>
    <string name="no_nfc" translatable="false">No NFC</string>
    <string name="enable_nfc" translatable="false">You need to enable NFC</string>
    <string name="invalid_ethereum_address" translatable="false">Invalid Ethereum address</string>
    <string name="refreshing" translatable="false">Refreshing…</string>
    <string name="send_all" translatable="false">Send all</string>
    <string name="chang_pin" translatable="false">Change PIN</string>
    <string name="unlock_pin" translatable="false">Unlock PIN</string>
    <string name="generate_from_seed" translatable="false">Import Private Key To NFC Card</string>
    <string name="set_pin" translatable="false">Get Private Key From NFC Card</string>
    <string name="label_key_index" translatable="false">Key Index:</string>
    <string name="ok" translatable="false">OK</string>
    <string name="change_pin_message" translatable="false">Changed PIN from %s to new PIN %s. Please write down following PUK of your card:
        %s
    </string>
    <string name="generate_from_seed_message" translatable="false">Generated key on index 0 with seed: %s</string>
    <string name="set_pin_message" translatable="false">Set PIN to %s. Please write down following PUK of your card: %s</string>
    <string name="unlock_pin_message" translatable="false">Unlocked PIN with PUK: %s</string>
    <string name="check_sig_counters" translatable="false">Check sig counters</string>
    <string name="global_sig_counter" translatable="false">Global signature counter: %d</string>
    <string name="sig_counter" translatable="false">Signature counter (for key index %d): %d</string>
    <string name="enter_old_and_new_pin" translatable="false">Enter old and new PIN:</string>
    <string name="old_pin" translatable="false">Old PIN</string>
    <string name="new_pin" translatable="false">New PIN</string>
    <string name="enter_import_seed_to_generate_key" translatable="false">Import Private Key To NFC Card:</string>
    <string name="import_seed" translatable="false">Import Private key</string>
    <string name="pin" translatable="false">Private Key</string>
    <string name="enter_your_preferred_pin" translatable="false">Get Private Key From NFC Card:</string>
    <string name="enter_your_puk_to_unlock_pin" translatable="false">Enter your PUK to unlock PIN:</string>
    <string name="puk" translatable="false">PUK</string>
    <string name="signature_counter_below" translatable="false">Signature counter below %d! Backup your funds!</string>
    <string name="change_recipient_address" translatable="false">Changed recipient address to %s</string>
    <string name="lost_tag" translatable="false">Tag lost</string>
    <string name="problem_reload_votes" translatable="false">Problem during reload of votes</string>
    <string name="problem_after_vote" translatable="false">Problem after vote</string>
    <string name="err_voting_name_required" translatable="false">Voting name needs at least 4 characters!</string>
    <string name="copy_puk_to_clipboard" translatable="false">Copy PUK to clipboard</string>
    <string name="puk_code" translatable="false">PUK unlock code</string>
    <string name="puk_copied" translatable="false">Copied PUK to clipboard!</string>
    <string name="tap_the_product_to_verify" translatable="false">Tap the product to verify</string>
    <string name="authentication_successful" translatable="false">Authentication Successful</string>
    <string name="product_id" translatable="false">Product ID</string>
    <string name="product_name" translatable="false">Product Name</string>
    <string name="timestamp" translatable="false">Timestamp</string>
    <string name="date" translatable="false">Date</string>
    <string name="manufacturer" translatable="false">Manufacturer</string>

    <string name="product_details" translatable="false">Add Product Details</string>
    <string name="verify_product" translatable="false">Verify Product</string>
    <string name="signatureData" translatable="false">signatureData</string>
    <string name="tap_the_product_card_to_read_the_public_key" translatable="false">Tap the product card to read the public key</string>
    <string name="dismiss" translatable="false">Dismiss</string>
    <string name="_50" translatable="false">50</string>
    <string name="_21000" translatable="false">21000</string>
    <string name="pin_optional" translatable="false">Password (optional)</string>
    <string name="togglebutton" translatable="false">ToggleButton</string>
    <string name="tap_the_producer_card_to_enter_the_details" translatable="false">Tap the producer card to enter the details</string>
    <string name="product_public_key" translatable="false">Product Public Key</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="brand_protection" translatable="false">Brand Protection</string>
</resources>
