<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/refresh_balance"
          android:title="@string/refresh_balance"
          app:showAsAction="never"
          android:titleTextColor="@color/black"
          android:background="@color/white" />
    <item android:id="@+id/get_private_key_from_nfc_card"
          android:title="@string/set_pin"
          app:showAsAction="never"
          android:titleTextColor="@color/black"
          android:background="@color/white"/>
    <item android:id="@+id/import_private_key_to_nfc_card"
          android:title="@string/generate_from_seed"
          app:showAsAction="never"
          android:titleTextColor="@color/black"
          android:background="@color/white"/>
    <item android:id="@+id/switch_network"
          android:title="@string/switch_network"
          app:showAsAction="never"
          android:titleTextColor="@color/black"
          android:background="@color/white"/>
</menu>