<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_send_transaction"
        tools:context=".SendTransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30px"
        android:layout_marginTop="30px"
        android:layout_marginEnd="30px"
        android:layout_marginBottom="30px"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight=".80">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recipientAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/recipient_address"
                    android:textSize="10sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_weight=".10"
                android:onClick="scanQrCode"
                android:scaleType="fitCenter"
                android:src="@drawable/qrcode" />

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_weight=".10"
                android:drawableTop="@drawable/nfc_logo"
                android:text="ToggleButton"
                android:textOff=" "
                android:textOn=" " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="0.9">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount_eth"
                    android:inputType="numberDecimal"
                    android:text="0.00" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:onClick="onSendAll"
                android:text="@string/send_all"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight=".30">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gasPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Max Priority Fee Per Gas (In GWEI)"
                    android:inputType="numberDecimal"
                    android:text="50"
                    android:visibility="visible" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gasLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Max Fee Per Gas (In GWEI)"
                android:inputType="numberDecimal"
                android:text="21000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="PIN (optional)"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/priceInEuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/hold_card_payment"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>