<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_send_to_smart_contract"
        tools:context=".SendToSmartContractActivity">

    <LinearLayout
        android:layout_width="382dp"
        android:layout_height="702dp"
        android:layout_marginStart="30px"
        android:layout_marginTop="30px"
        android:layout_marginEnd="30px"
        android:layout_marginBottom="30px"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_weight=".90">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contractAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/er20_contract_address"
                    android:textSize="10sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:layout_width="55dp"
                android:layout_height="47dp"
                android:layout_weight=".10"
                android:onClick="onScanContract"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/qrcode" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_weight=".90">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recipientAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/recipient_address"
                    android:textSize="10sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:layout_width="55dp"
                android:layout_height="47dp"
                android:layout_weight=".10"
                android:onClick="onScanRecipient"
                android:scaleType="fitCenter"
                android:src="@drawable/qrcode" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/token_amount"
                android:inputType="numberDecimal"
                android:text="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight=".30"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gasPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Max Priority Fee Per Gas (In GWEI)"
                    android:inputType="numberDecimal"
                    android:text="1.5"
                    android:visibility="visible" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".70"
                android:visibility="gone" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gasLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Max Fee Per Gas (In GWEI)"
                android:inputType="numberDecimal"
                android:text="1.51"
                android:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            tools:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="PIN (optional)"
                android:inputType="textPassword"
                android:visibility="gone" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/currentBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/reading_balance"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>